# singularity

./: configure.ac  singularity.spec.in  test.sh.in
etc/: configure_transform.py  singularity.conf.in
libexec/: image-handler.sh
libexec/cli/: exec.exec  exec.help  run.exec  run.help  shell.exec  shell.help
libexec/handlers/: image-docker.sh
libexec/helpers/checks/: 1-bash-hiddens.py  1-cache-content.py  1-docker.py  3-cve.py
libexec/python/: defaults.py  import.py  pull.py  size.py  utils.py
libexec/python/helpers/json/: add.py  delete.py  dump.py  get.py  inspect.py
libexec/python/shub/: api.py
src/: Makefile.am  sexec.c  simage.c
src/bootstrap/: Makefile.am  bootdef_parser.h  bootstrap.c
src/lib/: singularity.h
src/lib/bootstrap/: bootstrap.c  bootstrap.h
src/lib/image/: Makefile.am
src/lib/image/create/: create.c
src/lib/parser/: bootdef.c
src/lib/rootfs/image/: image.c  image.h
src/lib/runtime/: Makefile.am
src/lib/runtime/mounts/: Makefile.am
src/lib/util/: privilege.c
src/util/: Makefile.am  config_defaults.h.in  util.c
